--- a/visual.css
+++ b/visual.css
@@ -1,220 +1,265 @@
-/* Base */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
   background: #00c6ff;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: 15px;
-  font-weight: 900;
-  line-height: 1.5;
 }
 
-header {
-  background-color: #00c6ff;
-  border-bottom: 2px solid white;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  box-shadow: 0 5px 50px white;
+.site-header {
+  height: 150px;
+
+  display: flex;
+  justify-content: center; /* хоризонтално */
+  align-items: center; /* вертикално */
+
+  font-size: 50px;
+  font-weight: 800px;
+  color: rgb(255, 255, 255);
+
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
+  background: linear-gradient(270deg, #ff0080, #7928ca, #2afadf, #00c6ff);
+  background-size: 600% 600%;
+  animation: gradientMove 10s ease infinite;
+}
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.menu-wrapper{
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  padding: 0 20px;
+  background-color: #ff0080;
+  border-top: 2px solid #ffffff;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   position: sticky;
   top: 0;
+  z-index: 6666;          /* достатъчно висок */
+  background-color: #ff0080; /* да не прозира */
+  box-shadow: 0 10px 60px rgba(0, 0, 0, 0.35);
+  border: 0.1px solid white;
 }
 
-.top-bar {
-  background: #00c8ff;
+/* МАНЮ БАДЖ СТАРТ */
+
+.menu-badge-star{
+  position: absolute;
+  left: 20px;     /* местиш го наляво/надясно */
+  top: 5px;     /* местиш го нагоре/надолу */
+
+  width: 130px;
+  height: 130px;
+
+  background: #ffd700;
+  color: #000;
+
   display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  justify-content: center;
   align-items: center;
-  padding: 1rem;
-} 
+  justify-content: center;
+
+  font-weight: 800;
+  font-size: 20px;
+  letter-spacing: 0.2px;
+
+  z-index: 3000;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+
+  /* звезда */
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 72%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+}
+
+/* МАНЮ БАДЖ КРАЙ */
 
 .menu-bar {
-  min-height: 10px;
-  top: 7px;
+  top: 10px;
   z-index: 7777;
+}
+.menu-bar {
   list-style: none;
   display: flex;
   justify-content: center;
   font-weight:600;
-  gap: 20px;
-  padding: 1cap;
+  gap: 50px;
+  padding: 2cap;
   margin: 0;
-  text-decoration: none;
 }
-
+.menu-bar a:hover{
+  color: #000;
+}
 .menu-bar a {
   color: #ffffff;
   text-decoration: none;
 }
 
+/* изпъкване на меню */
+
+.menu-bar li a {
+  display: inline-block;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.menu-bar li a:hover {
+  transform: scale(1.08);
+  color:grey;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.12);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* изпъкване на меню - край */
+
 .menu-icons{
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
-
 .menu-icons a{
   color: #fff;
-  font-size: 12px;
-}
-
-
-.container {
-  width: min(100% - 2rem, 1100px);
-  margin: 0 auto;
-  padding: 1.25rem 0;
-
-}
-
-.dj-gigs h2 {
-  text-align: center;
-}
-
-.dj-gigs {
-  margin-top: 25px;
-
-  color: white;
-
-  border-top: 2px solid white;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-
-  border-bottom: 2px solid white;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-}
-
-.gigs-gallery {
-  display: grid;
-  grid-template-columns: 1fr ;/* mobile default */
-  gap: 1rem;
-  text-align: center;
-}
-.card {
-  border: 1px solid #ddd;
-  border-radius: 12px;
-  padding: 1rem;
-}
-
-.gig-card img {
-  border-radius: 20px;
-  width:300px;
-  height: 300px;
-  object-fit: cover;
-}
-
-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #00c6ff;
-  border-top: 2px solid white;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  box-shadow: 0 5px 50px white;
-  margin-top: 25px;
-  color: white;
-}
-
-.subscribe  {
-  display: colo;
-  justify-self: center;
-  align-items: center;
-  background: rgba(255,255,255,0.15);
-  border-radius: 30px;
-  padding: 5px;
-  border: 0.1rem solid white; 
-}
-
-.subscribe input {
-  background: transparent;
-  border:#000;
-  outline: none;
-  padding: 10px 15px;
-  color: #fff;
-  width: 220px;
   font-size: 20px;
 }
-
-.subscribe input::placeholder{
-  color: rgba(255,255,255,0.7);
+.menu-icons a:hover{
+  color:grey;
 }
-.subscribe button{
-  border: none;
-  background: #fff;
-  color: #000;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 16px;
+.has-dropdown {
+  position: relative;
+}
+.dropdown {
+  list-style: none;
+  list-style-position: outside;
+  margin: 0;
+  padding: 8px 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+
+  min-width: auto;
+  background: #ff0080;
+  border: 1px solid #fff;
+  border-radius: 12px;
+
+  display: none ;            /* скрито по default */
+  z-index: 1000;
+}
+.has-dropdown:hover .dropdown {
+  display: block;
 }
 
-.subscribe button:active {
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
-  transform: scale(1.15);
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+.dropdown li a {
+  padding: 5px 10px;   /* 8px горе/долу, 5px ляво/дясно */
 }
 
-@media (min-width: 900px) {
-  .top-bar {
-    justify-content: center;
-    flex-wrap: nowrap; /* desktop: single line */
-  }
+/* ПЪРВА СКЕЦИЯ НАЧАЛО */
 
-  .menu-bar {
-    font-size: 25px ;
-  }
-
-  .gig-card img{
-    width: 500px;
-    box-shadow: 0 0 10px black;
-  }
-  .menu-icons a {
-    font-size: 20px ;
-  }
-  
-  .gigs-gallery {
-    grid-template-columns: repeat(3, 1fr); /* desktop: 3 columns */
-    gap: 1.5rem;
-  }
-.footer {
+.dj-gigs {
+  padding: 0px 0px;
+  text-align: center;
+  color: #ffffff;
+}
+.dj-gigs middle {
+  padding: 0px 0px;
+  text-align: center;
+  color: #ffffff;
+}
+.dj-gigs h2 {
+  margin-top: 10;
+  margin-bottom:0;
+  font-size: 32px;
+  background: #00c6ff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.gigs-gallery {
   display: flex;
-  background-color: #00c6ff;
-  border-top: 2px solid white;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  box-shadow: 0 5px 50px white;
-  margin-top: 25px;
-  color: white;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  padding-top: 30px;
+  background: linear-gradient(
+  360deg,
+  #ff0080 0%,
+  #7928ca 30%,
+  #2afadf 65%,
+  #00c6ff 100%
+);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+ 
 }
+.gig-card {
+  width: 500px;
+}
+.gig-card img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 12px;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.gig-card:hover img {
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.35);
+}
+.gig-card img:hover {
+  transform: scale(1.05);
+}
+.gig-card p {
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 200%;
+}
+/* ПЪРВА СКЕЦИЯ КРАЙ */
 
-.footer-left{
+.footer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  color: rgb(255, 255, 255);
+}
+.footer-left {
   justify-self: start;
   padding-left: 50px;
 }
 .footer-center {justify-self: center;}
-
 .footer-right {
   justify-self: end;
   padding-right: 50px;
 }
 
-.subscribe  {
-  display: colo;
-  justify-self: center;
+.subscribe {
+  display: flex;
   align-items: center;
   background: rgba(255,255,255,0.15);
   border-radius: 30px;
-  padding: 5px;
-  border: 0.1rem solid white; 
+  padding: 10px;
+  border: 0.1rem solid; 
 }
-
 .subscribe input {
   background: transparent;
   border:#000;
@@ -237,11 +282,124 @@ footer {
   border-radius: 50%;
   cursor: pointer;
   font-size: 16px;
-}
 
+}
 .subscribe button:active {
   transition: transform 0.15s ease, box-shadow 0.15s ease;
   transform: scale(1.15);
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
 }
+
+.footer {
+  margin-top: 25px;
+
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  font-size: 50px;
+
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
+  background: linear-gradient(180deg, #ff0080, #00c6ff);
+  background-size: 1000% 150%;
 }
+
+/* ВТОРА СКЕЦИЯ НАЧАЛО */
+
+.dj-gigs2 {
+  padding: 0px 0px;
+  text-align: center;
+  color: #ffffff;
+  overflow: hidden;
+}
+.dj-gigs2 h3 {
+  margin-bottom:0;
+  padding-top: 10px;
+  font-size: 32px;
+  background-color: #ff0080;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  box-sizing: border-box;    /* padding да не “чупи” ширината */
+  text-align: center;
+}
+
+.dj-gigs2 h3 { padding-right: 125px; }
+
+.gigs-gallery2 {
+  display: grid;
+  grid-template-columns: 400px 1fr; /* снимка | текст */
+  gap: 200px;
+  align-items: center;
+  padding-left: 50px;
+  padding-bottom: 50px;
+  background-color: #ff0080;
+}
+.gig-card2 {
+  width: 500px;
+}
+.gig-card2 img {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.about-text {
+  margin-top: 0;
+  max-width: 800px;
+  line-height: 1.6;
+  text-align: justify;
+  font-size: 25px;
+}
+
+/* ВТОРА СКЕЦИЯ КРАЙ*/
+
+/* ТРЕТА СКЕЦИЯ НАЧАЛО */
+
+.dj-gigs3 {
+  padding: 0px 0px;
+  color: #ffffff;
+  text-align: center;
+  overflow: hidden;
+}
+.gigs-gallery3 {
+  display: grid;
+  grid-template-columns: 1fr 400px; /* текст| снимка */
+  gap: 50px;
+  align-items: center;
+  padding-right: 150px;
+  padding-left: 180px;
+  padding-bottom: 50px;
+  background-color: #ff0080;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.gig-card3 {
+  width: 500px;
+}
+.dj-gigs3 h4 {
+  margin-top: 0%;
+  margin-bottom:0;
+  padding-top: 10px;
+  font-size: 32px;
+  background-color: #ff0080;
+  box-sizing: border-box;    /* padding да не “чупи” ширината */
+  text-align: center;
+}
+
+.dj-gigs3 h4 { padding-right: 1045px; }
+
+.about-text3 {
+  margin-top: 0;
+  max-width: 800px;
+  line-height: 1.6;
+  text-align: justify;
+  font-size: 25px;
+}
+
+.img2 {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+/* ТРЕТА СКЕЦИЯ КРАЙ*/
+
